:iphone: explicitly set `display: inline-block` to ensure visibility on the back cheveron
it was not visible without it

--- a/packages/css/src/breadcrumb/breadcrumb.css
+++ b/packages/css/src/breadcrumb/breadcrumb.css
@@ -48,6 +48,7 @@
         display: inherit;
 
         &::before {
+          display: inline-block;
           margin-left: 0;
           background-image: var(--hds-breadcrumb-image-left);
         }
